# libbitcoin-blockchain

./: Makefile.am  configure.ac  install-cmake.sh  install-cmakepresets.sh  install.sh  libbitcoin_blockchain_test_runner.sh
.github/workflows/: ci.yml
include/bitcoin/: blockchain.hpp
include/bitcoin/blockchain/: binary_trie.hpp  block_identity.hpp  block_located.hpp  block_location.hpp  define.hpp  pointer_array_sink.hpp  prefix_queryable.hpp  query_filter.hpp  reverse_iterator.hpp  settings.hpp  unspent_transaction_outputs.hpp
include/bitcoin/blockchain/impl/: binary_trie.ipp  reverse_iterator.ipp
include/bitcoin/blockchain/organizers/: transaction_organizer.hpp
include/bitcoin/blockchain/pools/: transaction_entry.hpp  transaction_pool.hpp
include/bitcoin/blockchain/tree/: key_value_store.hpp  red_black_iterator.hpp  (+4 more)
src/database/revised/: block_index_store.cpp  header_result.cpp  header_store.cpp  index_data.cpp  merkle_tree_result.cpp  merkle_tree_store.cpp  payment_address_index_store.cpp  simple_allocator.cpp  simple_transaction_index_data.cpp  stealth_transaction_index_store.cpp  transaction_index_data.cpp  transaction_index_store.cpp  transaction_result.cpp  transaction_store.cpp
src/organizers/: transaction_organizer.cpp
src/pools/: transaction_entry.cpp  transaction_pool.cpp
test/: binary_trie.cpp  main.cpp
test/database/: block_index_store.cpp  payment_address_index_store.cpp  stealth_transaction_index_store.cpp  transaction_index_store.cpp
test/tree/: red_black_store.cpp  red_black_tree.cpp
test/trie/: modified_patricia_trie.cpp
(+43 files in other folders)
